Fix overflow issue by using display: flex on body (type)

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: sans-serif;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 .header, .introduction {
     background-color: #1F2937;
@@ -50,10 +52,6 @@ a:link, a:visited {
     font-size: 18px;
 }
 
-.introduction, .sushi, .quote, .more {
-    height: 350px;
-}
-
 .introduction {
     display: flex;
     justify-content: space-between;
@@ -64,6 +62,7 @@ a:link, a:visited {
 .introduction-text, .introduction-img {
     flex: 1 1 0;
     gap: 12px;
+    margin: 16px;
 }
 
 .introduction-text {
